fix spacing on landing page

--- a/src/App.css
+++ b/src/App.css
@@ -330,6 +330,8 @@
     grid-template-columns: 170px 170px;
     grid-template-rows: 1fr 0.1fr;
     justify-content: center;
+    gap: 0.8rem;
+
     margin: 0.5rem 0;
     width: 95%;
     border: 1px solid #d4a373;
@@ -353,7 +355,7 @@
   .itemsListPrice {
     display: flex;
     flex-direction: column;
-    margin: -1.5rem 0 1.5rem 1.3rem;
+    margin: -0.5rem 0 1.5rem 1.3rem;
     grid-column: 2;
     align-self: start;
     justify-self: start;
